Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug
Bug#: 8634
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Not yet assigned to anyone <unassigned@gcc.gnu.org>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: duchier@ps.uni-sb.de
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
bug.cc bug.cc application/octet-stream 2003-05-21 15:17 237 bytes Edit
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 8634 depends on: Show dependency tree
Show dependency graph
Bug 8634 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: Opened: 2002-11-19 02:56
memcpy of a small const array is incorrectly compiled inline
under -O2 or -O3 optimization, but not -O

Release:
GCC 3.2

Environment:
Gentoo Linux 1.4
Reading specs from /usr/lib/gcc-lib/i686-pc-linux-gnu/3.2/specs
Configured with: /var/tmp/portage/gcc-3.2-r2/work/gcc-3.2/configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info --enable-shared --host=i686-pc-linux-gnu --build=i686-pc-linux-gnu --target=i686-pc-linux-gnu --with-system-zlib --enable-languages=c,c++,ada,f77,objc,java --enable-threads=posix --enable-long-long --disable-checking --enable-cstdio=stdio --enable-clocale=generic --enable-__cxa_atexit --enable-version-specific-runtime-libs --with-gxx-include-dir=/usr/include/g++-v32 --with-local-prefix=/usr/local --enable-shared --enable-nls --without-included-gettext
Thread model: posix
gcc version 3.2

How-To-Repeat:
compile and run the attachment and observe the output:
the program performs the memcpy and then prints one line
for each element of the arrays, first the source then the
destination.  under -O2 optimization, the 2nd 3rd and 4th
bytes of the dest array are garbbled.

------- Comment #1 From Wolfgang Bangerth 2002-12-04 14:31 -------
State-Changed-From-To: open->analyzed
State-Changed-Why: Confirmed. This program
    ----------------------------
    #include <stdio.h>
    #include <string.h>
    
    int main()
    {
      char* buffer = new char[8];
      const char head[8] = {
        'A', 'B', 'C', 'D',
        'E', 'F', 'G', 'H'
      };
      memcpy(buffer,head,8);
      for(int i=0;i<8;i++)
        printf ("[%u] = %c, %c\n", i, head[i], buffer[i]);
      return 0;
    }
    --------------------------------
    yields with 3.2.2pre, 3.3pre, and 2.95 respectively:
    
    tmp/g> /home/bangerth/bin/gcc-3.2.2-pre/bin/c++ -O2 bug.cc  &&  ./a.out
    [0] = A, A
    [1] = B,
    [2] = C,
    [3] = D,
    [4] = E, E
    [5] = F, F
    [6] = G, G
    [7] = H, H
    
    
    tmp/g> /home/bangerth/bin/gcc-3.3-pre/bin/c++ -O2 bug.cc  &&  ./a.out
    [0] = A, A
    [1] = B,
    [2] = C,
    [3] = D,
    [4] = E, E
    [5] = F, F
    [6] = G, G
    [7] = H, H
    
    
    tmp/g> c++ -O2 bug.cc  &&  ./a.out
    [0] = A, A
    [1] = B, B
    [2] = C, C
    [3] = D, D
    [4] = E, E
    [5] = F, F
    [6] = G, G
    [7] = H, H
    
    
    That seems like a regression.

------- Comment #2 From glen@imodulo.com 2002-12-09 22:20 -------
From: Glen Nakamura <glen@imodulo.com>
To: gcc-gnats@gcc.gnu.org, gcc-bugs@gcc.gnu.org
Cc:  
Subject: Re: optimization/8634: [3.2/3.3 regression] incorrect code for inlining of memcpy under -O2
Date: Mon, 9 Dec 2002 22:20:00 -1000

 http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&database=gcc&pr=8634
 
 Additional analysis of the problem and work-around patch posted at:
 http://gcc.gnu.org/ml/gcc-patches/2002-12/msg00533.html
 
 GCC developers with more experience should decide whether or not
 const initializers should be flagged as RTX_UNCHANGING, and if so then
 the cases that generate multiple sets need to be fixed...
 
 - glen


------- Comment #3 From janis187@us.ibm.com 2002-12-23 16:37 -------
From: Janis Johnson <janis187@us.ibm.com>
To: gcc-gnats@gcc.gnu.org, gcc-prs@gcc.gnu.org, duchier@ps.uni-sb.de,
   gcc-bugs@gcc.gnu.org, nobody@gcc.gnu.org
Cc:  
Subject: Re: optimization/8634: [3.2/3.3 regression] incorrect code for inlining 
 of memcpy under -O2
Date: Mon, 23 Dec 2002 16:37:21 -0800

 The regression reported in PR optimization/8634 showed up
 starting with this patch (strange but true):
 
 Fri Dec 21 23:30:14 CET 2001  Jan Hubicka  <jh@suse.cz>
      * i386.h (TARGET_CPU_DEFAULT_pentium_mmx): New.
     (TARGET_CPU_DEFAULT_*): Renumber.
 
 I used this test case that Wolfgang provided.  It aborts
 when the wrong code is generated for -O2 on i686-linux:
 
 --------------
 /* incorrect code for inlining of memcpy under -O2 */
 
 #include <string.h>
 #include <stdlib.h>
 
 int
 main ()
 {
   int i;
   char buffer[8];
   const char head[8] =
     { 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H' };
   memcpy (buffer, head, 8);
   for (i = 0; i < 8; i++)
     if (head[i] != buffer[i])
       abort ();
   return 0;
 }
 --------------
 
 http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&database=gcc&pr=8634
 
 
 


------- Comment #4 From glen@imodulo.com 2003-03-23 18:07 -------
From: Glen Nakamura <glen@imodulo.com>
To: gcc-gnats@gcc.gnu.org, gcc-bugs@gcc.gnu.org
Cc:  
Subject: Re: optimization/8634: [3.2/3.3 regression] incorrect code for inlining of memcpy under -O2
Date: Sun, 23 Mar 2003 18:07:39 +0000

 --wRRV7LY7NUeQGEoC
 Content-Type: text/plain; charset=us-ascii
 Content-Disposition: inline
 
 http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&database=gcc&pr=8634
 
 Attached is an extended test case for constant initializers.
 
 
 --wRRV7LY7NUeQGEoC
 Content-Type: text/plain; charset=us-ascii
 Content-Disposition: attachment; filename="pr8634.c"
 
 /* PR optimization/8634 */
 /* Contributed by Glen Nakamura <glen@imodulo.com> */
 
 extern void abort (void);
 
 struct foo {
   char a, b, c, d, e, f, g, h, i, j;
 };
 
 int test1 ()
 {
   const char X[8] = { 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H' };
   char buffer[8];
   __builtin_memcpy (buffer, X, 8);
   if (buffer[0] != 'A' || buffer[1] != 'B'
       || buffer[2] != 'C' || buffer[3] != 'D'
       || buffer[4] != 'E' || buffer[5] != 'F'
       || buffer[6] != 'G' || buffer[7] != 'H')
     abort ();
   return 0;
 }
 
 int test2 ()
 {
   const char X[10] = { 'A', 'B', 'C', 'D', 'E' };
   char buffer[10];
   __builtin_memcpy (buffer, X, 10);
   if (buffer[0] != 'A' || buffer[1] != 'B'
       || buffer[2] != 'C' || buffer[3] != 'D'
       || buffer[4] != 'E' || buffer[5] != '\0'
       || buffer[6] != '\0' || buffer[7] != '\0'
       || buffer[8] != '\0' || buffer[9] != '\0')
     abort ();
   return 0;
 }
 
 int test3 ()
 {
   const struct foo X = { a : 'A', c : 'C', e : 'E', g : 'G', i : 'I' };
   char buffer[10];
   __builtin_memcpy (buffer, &X, 10);
   if (buffer[0] != 'A' || buffer[1] != '\0'
       || buffer[2] != 'C' || buffer[3] != '\0'
       || buffer[4] != 'E' || buffer[5] != '\0'
       || buffer[6] != 'G' || buffer[7] != '\0'
       || buffer[8] != 'I' || buffer[9] != '\0')
     abort ();
   return 0;
 }
 
 int test4 ()
 {
   const struct foo X = { .b = 'B', .d = 'D', .f = 'F', .h = 'H' , .j = 'J' };
   char buffer[10];
   __builtin_memcpy (buffer, &X, 10);
   if (buffer[0] != '\0' || buffer[1] != 'B'
       || buffer[2] != '\0' || buffer[3] != 'D'
       || buffer[4] != '\0' || buffer[5] != 'F'
       || buffer[6] != '\0' || buffer[7] != 'H'
       || buffer[8] != '\0' || buffer[9] != 'J')
     abort ();
   return 0;
 }
 
 int main ()
 {
   test1 (); test2 (); test3 (); test4 ();
   return 0;
 }
 
 --wRRV7LY7NUeQGEoC--


------- Comment #5 From glen@imodulo.com 2003-03-26 10:36 -------
From: Glen Nakamura <glen@imodulo.com>
To: gcc-gnats@gcc.gnu.org, gcc-bugs@gcc.gnu.org
Cc:  
Subject: Re: optimization/8634: [3.2 regression] incorrect code for inlining of memcpy under -O2
Date: Wed, 26 Mar 2003 10:36:20 -1000

 http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&database=gcc&pr=8634
 
 Did this PR get changed by mistake?  I'm still seeing this problem on
 the 3.3 branch as of 2003-03-26, but it's not marked as a 3.3 regression
 anymore...
 
 - glen


------- Comment #6 From s.bosscher@student.tudelft.nl 2003-04-06 17:29 -------
From: Steven Bosscher <s.bosscher@student.tudelft.nl>
To: gcc-gnats@gcc.gnu.org, gcc-bugs@gcc.gnu.org, nobody@gcc.gnu.org,
	duchier@ps.uni-sb.de, gcc-prs@gcc.gnu.org, mark@codesourcery.com
Cc:  
Subject: Re: optimization/8634: [3.2/3.3/3.4 regression] incorrect code for
 inlining of memcpy under -O2
Date: Sun, 06 Apr 2003 17:29:20 +0200

 http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&database=gcc&pr=8634
 
 Thanks to Sherlock Hubicka, this patch by Zdenek has re-surfaced:
 http://gcc.gnu.org/ml/gcc-patches/2003-02/msg01655.html
 
 The message was probably ignored because of the inspired subject
 line: "[PATCH] ..." (sic).
 
 Greetz
 Steven
 
 

------- Comment #7 From Richard Henderson 2003-04-07 23:00 -------
State-Changed-From-To: analyzed->closed
State-Changed-Why: http://gcc.gnu.org/ml/gcc-patches/2003-04/msg00482.html
    http://gcc.gnu.org/ml/gcc-patches/2003-04/msg00489.html

Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug