re PR rtl-optimization/8634 (incorrect code for inlining of memcpy under -O2)

PR opt/8634
        * function.c (purge_addressof_1): Don't try arithmetics for
        unchanging memories.

From-SVN: r65349